--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@
     border-radius: 70px;
 }
 
+
 .motto-image {
     margin-right: 15px;
     width: 70px; 
@@ -30,6 +31,22 @@
     line-height: 1.2; 
     font-weight: bold;
     letter-spacing: -1px;
+}
+
+@media (max-width: 768px) {
+    .motto-container {
+        width: 90%; 
+        padding-left: 10px; 
+        padding-right: 10px;
+        margin: 10px auto; 
+    }
+
+    .motto-image {
+        margin-right: 10px;
+        width: 70px; 
+        height: 70px;
+    }
+
 }
 
 body {
@@ -142,32 +159,34 @@ textarea {
 }
 
 .custom-file-upload input[type="file"] {
-    display: none; /* Hide default file input */
+    display: none; 
 }
 
 .custom-file-upload button {
+    font-weight: 400;
+    letter-spacing: 1px;
     width: 170px;
     background-color: #273657; 
     color: white; 
     border-radius: 4px; 
-    border: 2px solid transparent; /* Прозрачная рамка по умолчанию */
+    border: 2px solid transparent; 
     padding: 10px 15px;
-    box-sizing: border-box; /* Учитываем границы в размере */
-    transition: background-color 0.3s, color 0.3s, border-color 0.3s; /* Плавный переход */
+    box-sizing: border-box; 
+    transition: background-color 0.3s, color 0.3s, border-color 0.3s; 
     cursor: pointer;
 }
 
 .custom-file-upload button:hover {
-    background-color: white; /* Цвет фона при наведении */
-    color: #273657; /* Цвет текста при наведении */
-    border-color: #273657; /* Цвет рамки при наведении */
+    background-color: white; 
+    color: #273657; 
+    border-color: #273657; 
 }
 
 #img-preview {
     margin-top: 20px;
-    width: 150px; /* Set a max width for the preview */
+    width: 150px; 
     height: 150px;
-    display: none; /* Hide the preview by default */
+    display: none; 
     background-color: white;
     border: 2px solid;
     border-radius: 7%;
@@ -183,15 +202,18 @@ input[type="submit"] {
     background-color: #273657; 
     color: white; 
     border-radius: 4px; 
-    border: 2px solid transparent; /* Прозрачная рамка по умолчанию */
+    border: 2px solid transparent; 
     padding: 10px 15px;
-    box-sizing: border-box; /* Учитываем границы в размере */
-    transition: background-color 0.3s, color 0.3s, border-color 0.3s; /* Плавный переход */
+    box-sizing: border-box; 
+    transition: background-color 0.3s, color 0.3s, border-color 0.3s; 
     cursor: pointer;
+    font-weight: 400;
+    letter-spacing: 1px;
+    margin-top: 3px;
 }
 
 input[type="submit"]:hover {
-    background-color: white; /* Цвет фона при наведении */
-    color: #273657; /* Цвет текста при наведении */
-    border-color: #273657; /* Цвет рамки при наведении */
+    background-color: white; 
+    color: #273657; 
+    border-color: #273657; 
 }
