--- a/styles.css
+++ b/styles.css
@@ -33,18 +33,32 @@
     letter-spacing: -1px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 600px) {
     .motto-container {
-        width: 90%; 
-        padding-left: 10px; 
+        width: 95%; 
+        padding-left: 3px; 
         padding-right: 10px;
         margin: 10px auto; 
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     .motto-image {
-        margin-right: 10px;
-        width: 70px; 
-        height: 70px;
+        margin-right: 4px;
+        width: 60px; 
+        height: 60px;
+    }
+
+    .motto {
+        color: #273657;
+        font-family: 'Roboto', sans-serif;
+        text-align: center;
+        font-size: 20px; 
+        line-height: 1; 
+        font-weight: bold;
+        letter-spacing: -4%;
+        white-space: nowrap;
     }
 
 }
@@ -74,6 +88,7 @@ nav ul {
 }
 
 nav ul li {
+    white-space: nowrap;
     flex: 1; 
 }
 
